# portaudio

./: CMakeLists.txt  Makefile.darwin  Makefile.in  README.txt  SConscript  SConstruct  V19-devel-readme.txt  aclocal.m4  config.doxy  config.guess  configure  configure.in  install-sh  ltmain.sh  portaudio-2.0.pc.in
bindings/cpp/: CHANGELOG  COPYING  Makefile.in  aclocal.m4  configure  configure.ac
bindings/cpp/doc/: Makefile.in
bindings/cpp/include/: Makefile.in
bindings/cpp/lib/: Makefile.in
doc/src/: mainpage.dox
examples/: paex_record.c
include/: pa_asio.h  pa_linux_alsa.h  pa_mac_core.h  pa_win_wasapi.h  pa_win_waveformat.h  pa_win_wdmks.h  pa_win_wmme.h  portaudio.h
pa_asio/: ASIO-README.txt  iasiothiscallresolver.cpp  iasiothiscallresolver.h  pa_asio.cpp  pa_asio.h
pa_common/: pa_allocation.c  pa_allocation.h  pa_byteswappers.c  pa_byteswappers.h  pa_converters.c  pa_converters.h  pa_cpuload.c  pa_cpuload.h  pa_dither.c  pa_dither.h  pa_endianness.h  pa_front.c  pa_hostapi.h  pa_process.c  pa_process.h  pa_skeleton.c  pa_stream.c  pa_stream.h  pa_trace.c  pa_trace.h  pa_types.h  pa_util.h  portaudio.h
pa_jack/: pa_jack.c
pa_linux_alsa/: blocking_calls.c  callback_thread.c  pa_linux_alsa.c  pa_linux_alsa.h
pa_mac_core/: notes.txt  pa_mac_core.c  pa_mac_core.h  pa_mac_core_auhal.c  pa_mac_core_blocking.c  pa_mac_core_blocking.h  pa_mac_core_input_ring_buffer.c  pa_mac_core_utilities.c
pa_sgi/: Makefile  pa_sgi.c  pthread-Makefile
pa_tests/: README.txt  pa_devs.c  pa_fuzz.c  pa_minlat.c  paqa_devs.c  paqa_errs.c  patest1.c  patest_buffer.c  patest_callbackstop.c  patest_clip.c  patest_dither.c  patest_hang.c  patest_in_overflow.c  patest_latency.c  patest_leftright.c  patest_longsine.c  patest_many.c  patest_maxsines.c  patest_mono.c  patest_multi_sine.c  patest_out_underflow.c  patest_pink.c  patest_prime.c  patest_read_record.c  patest_read_write_wire.c  patest_record.c  patest_ringmix.c  patest_saw.c  patest_sine.c  patest_sine8.c  patest_sine_formats.c  patest_sine_time.c  patest_start_stop.c  patest_stop.c  patest_sync.c  patest_toomanysines.c  patest_underflow.c  patest_wire.c  patest_write_sine.c
pa_unix/: pa_unix_hostapis.c  pa_unix_util.c  pa_unix_util.h
pa_unix_oss/: pa_unix_oss.c
pa_win/: Makefile.msys  pa_win.c  pa_win_hostapis.c  pa_win_util.c  pa_x86_plain_converters.c  pa_x86_plain_converters.h
pa_win/msvc/: Makefile.msvc  portaudio.def  readme.txt
pa_win_ds/: dsound_wrapper.c  dsound_wrapper.h  pa_win_ds.c  pa_win_ds_dynlink.c
pa_win_wasapi/: pa_win_wasapi.cpp
pa_win_wdmks/: pa_win_wdmks.c
pa_win_wmme/: pa_win_wmme.c  pa_win_wmme.h
pablio/: pablio.c  ringbuffer.c  ringbuffer.h
portaudio.xcodeproj/: project.pbxproj
qa/: paqa_latency.c
qa/loopback/src/: audio_analyzer.c  paqa.c  test_audio_analyzer.c
src/: SConscript
src/common/: pa_allocation.c  pa_allocation.h  pa_converters.c  pa_converters.h  pa_cpuload.c  pa_cpuload.h  pa_dither.c  pa_dither.h  pa_endianness.h  pa_front.c  pa_hostapi.h  pa_memorybarrier.h  pa_process.c  pa_process.h  pa_ringbuffer.c  pa_ringbuffer.h  pa_skeleton.c  pa_stream.c  pa_stream.h  pa_trace.c  pa_trace.h  pa_types.h  pa_util.h
src/hostapi/alsa/: pa_linux_alsa.c
src/hostapi/asihpi/: pa_linux_asihpi.c
src/hostapi/asio/: pa_asio.cpp
src/hostapi/coreaudio/: notes.txt  pa_mac_core.c  pa_mac_core.h  pa_mac_core_blocking.c  pa_mac_core_blocking.h  pa_mac_core_internal.h  pa_mac_core_utilities.c  pa_mac_core_utilities.h  ringbuffer.c  ringbuffer.h
src/hostapi/dsound/: pa_win_ds.c  pa_win_ds_dynlink.c  pa_win_ds_dynlink.h
src/hostapi/jack/: pa_jack.c
src/hostapi/oss/: pa_unix_oss.c
src/hostapi/wasapi/: pa_win_wasapi.c  pa_win_wasapi.cpp
src/hostapi/wdmks/: pa_win_wdmks.c  readme.txt
src/hostapi/wmme/: pa_win_wmme.c
src/os/mac_osx/: pa_mac_hostapis.c
src/os/unix/: pa_unix_hostapis.c  pa_unix_util.c  pa_unix_util.h
src/os/win/: pa_win_hostapis.c  pa_win_util.c  pa_win_waveformat.c  pa_win_wdmks_utils.c  pa_win_wdmks_utils.h  pa_x86_plain_converters.c  pa_x86_plain_converters.h
test/: pa_devs.c  pa_fuzz.c  pa_minlat.c  paqa_devs.c  paqa_errs.c  patest1.c  patest_buffer.c  patest_callbackstop.c  patest_clip.c  patest_dither.c  patest_hang.c  patest_in_overflow.c  patest_latency.c  patest_leftright.c  patest_longsine.c  patest_many.c  patest_maxsines.c  patest_mono.c  patest_mono_asio_channel_select.c  patest_multi_sine.c  patest_out_underflow.c  patest_pink.c  patest_prime.c  patest_read_record.c  patest_read_write_wire.c  patest_record.c  patest_ringmix.c  patest_saw.c  patest_sine.c  patest_sine8.c  patest_sine_channelmaps.c  patest_sine_formats.c  patest_sine_time.c  patest_start_stop.c  patest_stop.c  patest_stop_playout.c  patest_sync.c  patest_timing.c  patest_toomanysines.c  patest_two_rates.c  (+5 more)
testcvs/: changeme.txt
